--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
       <!-- function -->
       <div class="searchField">
-        <label for="functionInput">Function / Context:</label>
+        <label for="functionInput">Function / Cycle:</label>
         <input type="text" name="function" id="functionInput" placeholder="Ex: lifegain-matters, cycle-m15-sliver" />
         <button type="button" id="addFunctionTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
         <span class="randomControls">
