adds "isFunny" option

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
         <input type="checkbox" name="includeExtras" id="includeExtrasCheckbox" />
         Include Extras
       </label>
+      <label>
+        <input type="checkbox" name="isFunny" id="isFunnyCheckbox" />
+        Only "Funny" Cards
+      </label>
     </fieldset>
 
     <section class="row">
