improves art field placeholder text

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <!-- art -->
       <div class="searchField">
         <label for="artInput">Art / Concept:</label>
-        <input type="text" name="art" id="artInput" placeholder="Ex: innistrad, ugin, pink-clouds" />
+        <input type="text" name="art" id="artInput" placeholder="Ex: calamity-beast, squirrel-horde" />
         <button type="button" id="addArtTextBtn" class="smallButton addToList"><i class="fas fa-arrow-right"></i> <i class="fas fa-list"></i></button>
         <span class="randomControls">
           <button type="button" id="addRandomArtBtn" class="smallButton"><i class="fas fa-add"></i> <i class="fas fa-random"></i></button>
