fixes linkBox spacing, adds rarity to listed stats

--- a/details.html
+++ b/details.html
@@ -28,6 +28,7 @@
         <tr class="type-line"></tr>
         <tr class="oracle-text"></tr>
         <tr class="power-toughness"></tr>
+        <tr class="rarity"></tr>
         <tr class="set-name"></tr>
       </table>
     </div>
@@ -36,6 +37,7 @@
   <div id="card-back">
     <div class="displayBox"></div>
   </div>
+  <br />
   <div class="linkBox"></div>
   <footer></footer>
 </body>
