--- a/random.html
+++ b/random.html
@@ -25,10 +25,10 @@
     <div class="displayBox stat-box">
       <table class="stat-table">
         <tr class="mana-cost"></tr>
-        <tr class="type-line">
-        </tr>
+        <tr class="type-line"></tr>
         <tr class="oracle-text"></tr>
         <tr class="power-toughness"></tr>
+        <tr class="rarity"></tr>
         <tr class="set-name"></tr>
       </table>
     </div>
@@ -38,7 +38,7 @@
     <div class="displayBox mainImage"></div>
   </div>
   <br />
-  <div class="displayBox linkBox"></div>
+  <div class="linkBox"></div>
   <footer></footer>
 </body>
 
