--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="css/style.css" />
+  <!-- <script src="js/initCatalogs.js"></script> -->
   <script src="js/index.js" defer></script>
 </head>
 
