adds loading messages, fixes set suggestions loading issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
   <header>
     <h2>CARD CONCLAVE</h2>
+    <h3 class="loading-message" style="display: none;"></h3>
   </header>
+
 
   <form autocomplete="off" id="searchForm">
 
