--- a/results.html
+++ b/results.html
@@ -17,6 +17,7 @@
 <body>
   <header>
     <h1>Search Results</h1>
+    <h3 class="loading-message" style="display: none;"></h3>
     <span id="displayingResults"></span>
   </header>
   <div class="displayBox">
